# wireguard-zephyr-wifi

./: CMakeLists.txt  Kconfig  LICENSE  README.md  README.rst  prj.conf
patch/subsys/net/ip/: icmpv4.c  icmpv4.c.patch
scripts/: genkey.sh  privatekey  publickey
src/: common.h  crypto.c  crypto.h  wg_comm.c  wg_main.c  wg_timer.c  wg_timer.h  wg_tun.c  wifi.c  wireguard-platform.c  wireguard.c  wireguard.h  wireguard_vpn.c  wireguard_vpn.h  wireguardif.c  wireguardif.h
src/crypto/: chacha20.c  x25519.c
src/lwip_h/: arch.h  ip4.h  ip4_addr.h  ip6_addr.h  ip_addr.h
